# annual_events

./: Cargo.toml  build.rs  events.txt
.github/workflows/: ci.yml  push.yml
src/: lib.rs
