[package]
name = "annual_events"
version = "0.1.0"
authors = ["Daniel Wagner-Hall <dawagner@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
lambda_runtime = "0.13"
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros"] }

[build-dependencies]
anyhow = "1"
